--- a/src/components/shared/Quote/Quote.module.scss
+++ b/src/components/shared/Quote/Quote.module.scss
@@ -13,7 +13,7 @@
   padding: 24px 32px;
   border: none;
 
-  font-size: 0.7em;
+  font-size: 0.7rem;
   font-style: italic;
   font-family: 'Future Z', 'Orbitron', 'JetBrains Mono', monospace;
   font-weight: 800;
